--- a/product-manager.html
+++ b/product-manager.html
@@ -72,7 +72,7 @@
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-27</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.jobvite.com/automationanywhere/job/oKHBafwW'>Automation Anywhere Careers - Product Manager</a></h5> 
+<h5><a href='https://jobs.jobvite.com/automationanywhere/job/oKHBafwW'>Automation Anywhere Careers - Product Manager</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-27</p>
 <hr/>
@@ -200,7 +200,7 @@
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-27</p>
 <hr/>
-<h5><a href='https://jobs.jobvite.com/smarsh/job/oYJvafw6'>Smarsh Careers - Product Manager</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.jobvite.com/smarsh/job/oYJvafw6'>Smarsh Careers - Product Manager</a></h5> 
 <p><span class="badge badge-light">Portland, OR</span></p>
 <p>Posted on: 2019-07-27</p>
 <hr/>
@@ -212,7 +212,7 @@
 <p><span class="badge badge-light">Florida, United States</span></p>
 <p>Posted on: 2019-07-27</p>
 <hr/>
-<h5><a href='http://jobs.jobvite.com/forescout/job/oxGDafwK'>Forescout Technologies Inc. Careers - IoT Security Product Owner</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://jobs.jobvite.com/forescout/job/oxGDafwK'>Forescout Technologies Inc. Careers - IoT Security Product Owner</a></h5> 
 <p><span class="badge badge-light">Tel Aviv</span></p>
 <p>Posted on: 2019-07-27</p>
 <hr/>
@@ -262,7 +262,7 @@
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-26</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://atlanticmedia.applytojob.com/apply/uuhM9K9rgG/Associate-Product-Manager'>Associate Product Manager - Atlantic Media - Career Page</a></h5> 
+<h5><a href='http://atlanticmedia.applytojob.com/apply/uuhM9K9rgG/Associate-Product-Manager'>Associate Product Manager - Atlantic Media - Career Page</a></h5> 
 <p><span class="badge badge-light">Washington, DC</span></p>
 <p>Posted on: 2019-07-26</p>
 <hr/>
@@ -274,7 +274,7 @@
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-26</p>
 <hr/>
-<h5><a href='https://careers-grubhub.icims.com/jobs/8195/sr.-product-manager/job'>Careers at Grubhub - Sr. Product Manager in New York, New York ...</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://careers-grubhub.icims.com/jobs/8195/sr.-product-manager/job'>Careers at Grubhub - Sr. Product Manager in New York, New York ...</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Jul 17, 2019 ... Gather and unearth business opportunities through research, data analysis, user 
 experience analysis and testing, competitive research and any other relevant?...</p>
@@ -313,7 +313,7 @@ this?...</p>
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-26</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://productsup.join.com/jobs/260825-product-manager-m-f-d'>Job @ Productsup (Berlin): Product Manager (m/f/d) | JOIN</a></h5> 
+<h5><a href='https://productsup.join.com/jobs/260825-product-manager-m-f-d'>Job @ Productsup (Berlin): Product Manager (m/f/d) | JOIN</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-26</p>
 <hr/>
@@ -349,7 +349,7 @@ this?...</p>
 <p><span class="badge badge-light">London</span></p>
 <p>Posted on: 2019-07-26</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.jobvite.com/aak-se/job/oHnuafws'> AAK karri?rer?Assistant Technical Product Manager</a></h5> 
+<h5><a href='https://jobs.jobvite.com/aak-se/job/oHnuafws'> AAK karri?rer?Assistant Technical Product Manager</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-26</p>
 <hr/>
@@ -447,7 +447,7 @@ delivering SaaS solutions, or you might be working in a Business Analyst or?...<
 <p><span class="badge badge-light">Warsaw, Poland</span></p>
 <p>Posted on: 2019-07-25</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://expedia.wd5.myworkdayjobs.com/search/job/Austin-Domain-11---HomeAway/Senior-Technical-Product-Manager_R-46038?source=BuiltInAustin'>Senior Technical Product Manager, Sales and Support Platforms</a></h5> 
+<h5><a href='https://expedia.wd5.myworkdayjobs.com/search/job/Austin-Domain-11---HomeAway/Senior-Technical-Product-Manager_R-46038?source=BuiltInAustin'>Senior Technical Product Manager, Sales and Support Platforms</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Jul 16, 2019 ... ... leverage native Salesforce.com platform capabilities. Experience applying 
 machine learning/AI to drive improvements in sales or customer support 
