--- a/data-science.html
+++ b/data-science.html
@@ -45,11 +45,39 @@
   
       
 <!--Begin body here --> 
+<h5><a href='http://h2oai.applytojob.com/apply/HHv5MDx3NX/Enterprise-Account-Exec-Data-Science-ML-Paris'>Enterprise Account Exec- Data Science / ML -Paris - h2o.ai - Career Page</a></h5> 
+<p><span class="badge badge-light"></span></p>
+<p>Posted on: 2019-07-27</p>
+<hr/>
+<h5><a href='http://h2oai.applytojob.com/apply/1wqz49lLJj/Enterprise-Account-Exec-Data-Science-ML-London'>Enterprise Account Exec- Data Science / ML -London - h2o.ai - Career Page</a></h5> 
+<p><span class="badge badge-light"></span></p>
+<p>Posted on: 2019-07-27</p>
+<hr/>
+<h5><a href='http://h2oai.applytojob.com/apply/V6k4JUphaX/Sr-Enterprise-Account-Exec-Data-Science-ML-Munich'>Sr. Enterprise Account Exec- Data Science / ML -Munich - h2o.ai - Career Page</a></h5> 
+<p><span class="badge badge-light"></span></p>
+<p>Posted on: 2019-07-27</p>
+<hr/>
+<h5><a href='http://h2oai.applytojob.com/apply/Y4bUDCcNNV/Sr-Enterprise-Account-Exec-Data-Science-ML-Sydney'>Sr. Enterprise Account Exec- Data Science / ML -Sydney - h2o.ai - Career Page</a></h5> 
+<p><span class="badge badge-light"></span></p>
+<p>Posted on: 2019-07-27</p>
+<hr/>
+<h5><a href='http://h2oai.applytojob.com/apply/bw0InGK795/Sr-Enterprise-Account-Exec-Data-Science-ML-Toronto'>Sr. Enterprise Account Exec- Data Science / ML -Toronto - h2o.ai - Career Page</a></h5> 
+<p><span class="badge badge-light"></span></p>
+<p>Posted on: 2019-07-27</p>
+<hr/>
+<h5><a href='http://h2oai.applytojob.com/apply/1PpI3hq6wW/Customer-Data-Scientist-Solution-Architect-USParisMunich'>Customer Data Scientist / Solution Architect (US/Paris/Munich) - h2o.ai - Career Page</a></h5> 
+<p><span class="badge badge-light"></span></p>
+<p>Posted on: 2019-07-27</p>
+<hr/>
+<h5><a href='http://h2oai.applytojob.com/apply/IpXAHNqOgK/Sr-Enterprise-Account-Exec-Data-Science-ML-Mid-Atlantic-MA-DC-VA-PA'>Sr. Enterprise Account Exec- Data Science / ML -Mid Atlantic (MA, DC, VA, PA) - h2o.ai - Career Page</a></h5> 
+<p><span class="badge badge-light"></span></p>
+<p>Posted on: 2019-07-27</p>
+<hr/>
 <h5><a href='https://talpasolutions.join.com/jobs/272213-data-scientist'>Job @ talpasolutions (Essen): Data Scientist | JOIN</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-27</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.lever.co/bird/24da3bfe-6231-4d0f-a68c-6b7b833d6cd5'>Bird Careers - Director, Data Science</a></h5> 
+<h5><a href='https://jobs.lever.co/bird/24da3bfe-6231-4d0f-a68c-6b7b833d6cd5'>Bird Careers - Director, Data Science</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-26</p>
 <hr/>
@@ -61,7 +89,7 @@
 <p><span class="badge badge-light">Toronto, ON Canada</span></p>
 <p>Posted on: 2019-07-26</p>
 <hr/>
-<h5><a href='https://jobs.smartrecruiters.com/SiaPartners/743999692292417-consultant-e-data-science'>Sia Partners Consultant(e) Data Science | SmartRecruiters</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/SiaPartners/743999692292417-consultant-e-data-science'>Sia Partners Consultant(e) Data Science | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light">Paris, France</span></p>
 <p>Posted on: 2019-07-26</p>
 <hr/>
@@ -106,7 +134,7 @@ have?...</p>
 <p><span class="badge badge-light">Toronto, Ontario, Canada Toronto</span></p>
 <p>Posted on: 2019-07-26</p>
 <hr/>
-<h5><a href='https://smartnews.workable.com/j/37270B89CA'>SmartNews, Inc. - Jobs: Data Science Manager - Apply online</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://smartnews.workable.com/j/37270B89CA'>SmartNews, Inc. - Jobs: Data Science Manager - Apply online</a></h5> 
 <p><span class="badge badge-light">Tokyo, Japan Tokyo</span></p>
 <p>Posted on: 2019-07-26</p>
 <hr/>
@@ -225,7 +253,7 @@ Science (?Behavioral Data Scientist?) to support our three core operational?...<
 <p><span class="badge badge-light">New York, United States</span></p>
 <p>Posted on: 2019-07-24</p>
 <hr/>
-<h5><a href='https://boards.greenhouse.io/askmediagroup/jobs/4365031002'>Job Application for Senior Data Scientist at Ask Media Group</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/askmediagroup/jobs/4365031002'>Job Application for Senior Data Scientist at Ask Media Group</a></h5> 
 <p><span class="badge badge-light">Oakland, CA</span></p>
 <p>Posted on: 2019-07-24</p>
 <hr/>
@@ -277,11 +305,11 @@ Science (?Behavioral Data Scientist?) to support our three core operational?...<
 <p><span class="badge badge-light">Lisbon, Portugal</span></p>
 <p>Posted on: 2019-07-24</p>
 <hr/>
-<h5><a href='https://boards.greenhouse.io/brex/jobs/4365077002'>Job Application for Data Scientist, Risk  at Brex</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/brex/jobs/4365077002'>Job Application for Data Scientist, Risk  at Brex</a></h5> 
 <p><span class="badge badge-light">San Francisco, California</span></p>
 <p>Posted on: 2019-07-24</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://talpasolutions.join.com/jobs/251352-data-scientist'>Job @ talpasolutions (Essen): Data Scientist | JOIN</a></h5> 
+<h5><a href='https://talpasolutions.join.com/jobs/251352-data-scientist'>Job @ talpasolutions (Essen): Data Scientist | JOIN</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-04-05</p>
 <hr/>
@@ -334,7 +362,7 @@ application. Resume/CV. ATTACH RESUME/CV. Couldn't auto-read resume.</p>
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-23</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.crelate.com/portal/fahrenheitgroup/job/m9rxxde3cbgujtcdsjz388ywdo'>Data Scientist (Ph.D) | The Fahrenheit Group</a></h5> 
+<h5><a href='https://jobs.crelate.com/portal/fahrenheitgroup/job/m9rxxde3cbgujtcdsjz388ywdo'>Data Scientist (Ph.D) | The Fahrenheit Group</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-23</p>
 <hr/>
@@ -396,7 +424,7 @@ and artificial intelligence advances? In an increasingly connected world, massiv
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-23</p>
 <hr/>
-<h5><a href='https://boards.greenhouse.io/datacamp/jobs/1788671'>Job Application for Part Time Data Science Program Lead  at DataCamp</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/datacamp/jobs/1788671'>Job Application for Part Time Data Science Program Lead  at DataCamp</a></h5> 
 <p><span class="badge badge-light">New York City</span></p>
 <p>Posted on: 2019-07-23</p>
 <hr/>
@@ -455,34 +483,6 @@ federal?...</p>
 <h5><a href='https://jobs.smartrecruiters.com/KellyServicesEu/743999676252687-data-scientist-gai'>Kelly Services Data Scientist - GAI | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light">Cambridge, UK</span></p>
 <p>Posted on: 2019-07-22</p>
-<hr/>
-<h5><a href='https://jobs.smartrecruiters.com/KellyServicesEu/743999676244027-data-scientist-oncology'>Kelly Services Data Scientist - Oncology | SmartRecruiters</a></h5> 
-<p><span class="badge badge-light">Cambridge, UK</span></p>
-<p>Posted on: 2019-07-22</p>
-<hr/>
-<h5><a href='https://jobs.jobvite.com/maven-wave-partners/job/ojKBafwy'>Maven Wave Partners Careers - Data Science Manager</a></h5> 
-<p><span class="badge badge-light"></span></p>
-<p>Posted on: 2019-07-22</p>
-<hr/>
-<h5><a href='https://nuvasive.avature.net/careers/JobDetail/Data-Scientist-NCS/6349'>Data Scientist, NCS - External Careers</a></h5> 
-<p><span class="badge badge-light"></span></p>
-<p>Posted on: 2019-07-22</p>
-<hr/>
-<h5><a href='http://pitchup.applytojob.com/apply/PNwdCR4N3Y/Data-Scientist'>Data Scientist - Pitchup.com - Career Page</a></h5> 
-<p><span class="badge badge-light"></span></p>
-<p>Posted on: 2019-07-22</p>
-<hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.jobvite.com/careers/service/redirect?c=qC9aVfwA&k=Job&j=oYEM9fwh&__jvst=Employee&__jvsd=sNJTqgwA&__jvsc=Twitter&bid=nMGTPKwp'>Freedom Financial Network Careers - Senior Data Scientist</a></h5> 
-<p><span class="badge badge-light">San Mateo California</span></p>
-<p>Posted on:: 2019-07-22</p>
-<hr/>
-<h5><a href='https://jobs.smartrecruiters.com/AdamKayGroup/743999692034441-data-scientist'>Adam Kay Group Data Scientist | SmartRecruiters</a></h5> 
-<p><span class="badge badge-light">Michigan, United States</span></p>
-<p>Posted on: 2019-07-21</p>
-<hr/>
-<h5><a href='https://boards.greenhouse.io/dcard/jobs/874289'>Job Application for Junior Data Scientist / Machine Learning Engineer at Dcard</a></h5> 
-<p><span class="badge badge-light"></span></p>
-<p>Posted on: 2019-07-21</p>
 <hr/>
 
 
